2.10.5 (06-02-2021)
- Refactor: Remove references of deprecated slots of qualification

2.10.4 (03-02-2021)
- Bug fix - isFirstTimeOnDegree - #UL-FC-2363

2.10.3 (22-01-2021)
- Bug fix: On A3ES export, replace non standard double quotes

2.10.2 (20-01-2021)
- Bug fix: On A3ES export, replace non standard dashes

2.10.1 (05-01-2021)
- Improvement: Added new XSD files for RAIDES 2020
- Bug fix: RAIDES: Validate mobility origin country

2.10.0 (09-11-2020)
- Improvement: Added excluded dregrees to RaidesInstance

2.9.7 (14-07-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core and academic-extensions
- Bug fix: When exporting teacher jobs to A3ES, untie sort by comparing by externalId   

2.9.6 (25-04-2020)
- Refactor: Replace fenixedu-academic-treasury dependency by fenixedu-academic-treasury-base and fenixedu-academic-treasury-ui

2.9.5 (22-04-2020)
- Bug fix: Set default ResideConcelho with 9999 as default value only when PT is the country

2.9.4 (20-04-2020)
- Bug fix: Set default ResideConcelho with 9999 as default value

2.9.3 (04-04-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core (removal of organizational Units subclasses)

2.9.2 (19-03-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core (PrecedentDegreeInformation split into 'completed' and 'previous')

2.9.1 (16-03-2020)
- Bug fix: Correcting Java 11 release

2.9.0 (09-03-2020)
- New feature: Support for Java 11

2.8.8 (06-03-2020)
- Fix: A3es: both FCDs and FUCs don't send any data if no value is selected + fixed a typo

2.8.7 (04-03-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core
- Fix: A3es: disabled bibliography non printable chars cleanup

2.8.6 (04-03-2020)
- Fix: Changed A3ES help message to indicate that user should explicitly choose which data to send
- Fix: Fixed bug on A3ESInstance initialization 

2.8.5 (06-02-2020)
- Refactor: upgraded fenixedu-academic-core dependency (removed deprecated StudentCandidacy slots)

2.8.4 (30-01-2020)